refactor: simplify automatic file ingestion
